did the logout functionality

--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
                 <li><a id="btnLog" href="#" class="nav-link">Login</a></li>
                 <li><a id="btnReg" href="#" class="nav-link">Register</a></li>
                 <li><a id="userDisplay" href="#" class="nav-link"></a></li>
-                <li><a id="btnLogOut" href="#" class="nav-link"></a>Logout</li>
+                <li><a id="btnLogOut" href="#" class="nav-link">Logout</a></li>
             </ul>
             <div class="burger-menu">
                 <span class="burger-line"></span>
@@ -64,13 +64,13 @@
                     </g>
                 </svg>
             </a>
-        </div>        
+        </div>
     </section>
     <section class="search-populate-movies">
         <div class="section-container">
             <div class="search-container">
                 <div class="search-btn-container">
-                    <input type="text" id="title" class="search-input" placeholder="Search...">                    
+                    <input type="text" id="title" class="search-input" placeholder="Search...">
                     <button class="search-btn" id="searchBtn">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search" class="svg-inline--fa fa-search fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
@@ -176,7 +176,7 @@
             <div class="footer-title">
                 <p class="logo">Movie<span>bit</span></p>
                 <p>Get your movies bit by bit</p>
-            </div>            
+            </div>
             <div class="footer-social">
                 <div class="footer-social-wrapper">
                     <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter-square" class="svg-inline--fa fa-twitter-square fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
