add dynamic search

--- a/pages/home.html
+++ b/pages/home.html
@@ -93,7 +93,7 @@
                         </span>
                     </p>
                     <form>
-                        <ul>
+                        <ul id="filtersList">
                             <li class="filter-item clearfix">
                                 <input type="checkbox" id="yearBox" class="search-checkbox"/>
                                 <label for="yearBox" class="form-check-label">Year</label>
