logout functionality + modificare display/hide nav buttons using classes displayNavButtons si hideNavButtons

--- a/pages/home.html
+++ b/pages/home.html
@@ -15,11 +15,11 @@
         <div class="section-container">
             <h1 class="logo">MOVIE<span>bit</span></h1>
             <ul class="navigation">
-                <li><a href="#" class="nav-link">Home</a></li>
-                <li><a id="btnLog" href="#" class="nav-link">Login</a></li>
-                <li><a id="btnReg" href="#" class="nav-link">Register</a></li>
-                <li><a id="userDisplay" href="#" class="nav-link"></a></li>
-                <li><a id="btnLogOut" href="#" class="nav-link">Logout</a></li>
+                <li class="displayNavButtons"><a href="#" class="nav-link">Home</a></li>
+                <li id="btnLog" class="displayNavButtons"><a href="#" class="nav-link">Login</a></li>
+                <li id="btnReg" class="displayNavButtons"><a href="#" class="nav-link">Register</a></li>
+                <li id="userDisplay" class="hideNavButtons"><a id="userDisplayA" href="#" class="nav-link"></a></li>
+                <li id="btnLogOut" class="hideNavButtons"><a href="#" class="nav-link">Logout</a></li>
             </ul>
             <div class="burger-menu">
                 <span class="burger-line"></span>
