add details page functionality

--- a/pages/home.html
+++ b/pages/home.html
@@ -218,6 +218,6 @@
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
     <script src="../views/home.js"></script>
-    <script src="../views/movieDetails.js"></script>
+    <!-- <script src="../views/movieDetails.js"></script> -->
 </body>
 </html>
