--- a/pages/home.html
+++ b/pages/home.html
@@ -13,9 +13,8 @@
 <body>
     <nav class="navigation-bar">
         <div class="section-container">
-            <h1 class="logo">MOVIE<span>bit</span></h1>
+            <a href="./home.html" class="logo">MOVIE<span>bit</span></a>
             <ul class="navigation">
-                <li class="displayNavButtons"><a href="#" class="nav-link">Home</a></li>
                 <li id="btnLog" class="displayNavButtons"><a href="#" class="nav-link">Login</a></li>
                 <li id="btnReg" class="displayNavButtons"><a href="#" class="nav-link">Register</a></li>
                 <li id="userDisplay" class="hideNavButtons"><a id="userDisplayA" href="#" class="nav-link"></a></li>
@@ -148,9 +147,7 @@
                     <p class="movie-header-title">Movie<span>bit</span></p>
                     <p class="site-motto">Get your movies bit by bit</p>
                 </div>
-                <div class="movie-list" id="movieList">
-
-                </div>
+                <div class="movie-list" id="movieList"></div>
                 <div class="pagination">
                     <!-- <a href="#" id="firstPage">&laquo;</a>
                     <a href="#" id="prevPage">&lt;</a>
@@ -163,22 +160,6 @@
                     <a href="#" id="lastPage">&raquo;</a> -->
                   </div>
                 <!-- <a href="#" class="movie-item">
-                    <img src="../img/nice-guys.jpg" alt=""/>
-                    <p class="movie-title">The good guys</p>
-                </a>
-                <a href="#" class="movie-item">
-                    <img src="../img/nice-guys.jpg" alt=""/>
-                    <p class="movie-title">The good guys</p>
-                </a>
-                <a href="#" class="movie-item">
-                    <img src="../img/nice-guys.jpg" alt=""/>
-                    <p class="movie-title">The good guys</p>
-                </a>
-                <a href="#" class="movie-item">
-                    <img src="../img/nice-guys.jpg" alt=""/>
-                    <p class="movie-title">The good guys</p>
-                </a>
-                <a href="#" class="movie-item">
                     <img src="../img/nice-guys.jpg" alt=""/>
                     <p class="movie-title">The good guys</p>
                 </a> -->
@@ -218,6 +199,7 @@
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
     <script src="../views/home.js"></script>
-    <!-- <script src="../views/movieDetails.js"></script> -->
+    <script src="../views/slider.js"></script>
+    <script src="../views/open-menu.js"></script>
 </body>
 </html>
