--- a/pages/home.html
+++ b/pages/home.html
@@ -148,21 +148,7 @@
                     <p class="site-motto">Get your movies bit by bit</p>
                 </div>
                 <div class="movie-list" id="movieList"></div>
-                <div class="pagination">
-                    <!-- <a href="#" id="firstPage">&laquo;</a>
-                    <a href="#" id="prevPage">&lt;</a>
-                    <a href="#">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-                    <a href="#" id="nextPage">&gt;</a>
-                    <a href="#" id="lastPage">&raquo;</a> -->
-                  </div>
-                <!-- <a href="#" class="movie-item">
-                    <img src="../img/nice-guys.jpg" alt=""/>
-                    <p class="movie-title">The good guys</p>
-                </a> -->
+                <div class="pagination"></div>
             </div>
         </div>
     </section>
