--- a/pages/home.html
+++ b/pages/home.html
@@ -192,6 +192,7 @@
     <script src="../models/Movie.js"></script>
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
+    <script src="../views/logged.js"></script>
     <script src="../views/home.js"></script>
     <script src="../views/slider.js"></script>
     <script src="../views/open-menu.js"></script>
