--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -43,7 +43,7 @@
                                     <path class="cls-2" d="M18.59,12.41l4,4-8.69,8.7-3.57.39a.75.75,0,0,1-.83-.83l.4-3.57Zm6.48-.6L23.19,9.93a1.52,1.52,0,0,0-2.13,0L19.29,11.7l4,4,1.77-1.77A1.52,1.52,0,0,0,25.07,11.81Z"/>
                                     </g></g>
                                 </svg>
-                            </button>                        
+                            </button>
                             <button type="" id="delete_btn" class="edit-delete-btns">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -78,8 +78,8 @@
                         <div class="details-language-and-country">
                             <p class="" id="selectedMovieLanguage">English</p>
                             <p class="" id="selectedMovieCountry">USA</p>
-                        </div>    
-                    </div>                                   
+                        </div>
+                    </div>
                     <div class="details-rating-and-votes">
                         <p><span id="selectedMovieRating"></span> imdb<span></p>
                         <p><span id="selectedMovieVotes"></span><span> votes</span></p>
@@ -129,6 +129,7 @@
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
     <script src="../views/open-menu.js"></script>
+    <script src="../views/logged.js"></script>
     <script src="../views/movieDetails.js"></script>
 </body>
 
