add delete confirmation / redirect user

--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -131,6 +131,7 @@
     <script src="../views/open-menu.js"></script>
     <script src="../views/logged.js"></script>
     <script src="../views/movieDetails.js"></script>
+    <script src="../views/infoMessage.js"></script>
 </body>
 
 </html>
