add data to edit

--- a/pages/add-edit.html
+++ b/pages/add-edit.html
@@ -75,7 +75,11 @@
                         <label for="type-input">Type</label>
                         <input id="type-input" type="text"></input>
                     </div>
-                    <div class="input-component upload-poster">
+                    <div class="input-component">
+                        <label for="uploadPoster-input">Poster Link</label>
+                        <input id="uploadPoster-input" type="text"></input>
+                    </div>
+                    <!-- <div class="input-component upload-poster">
                         <label for="uploadPoster-input" class="label-poster">
                             <div>
                                 <span>Upload poster</span>
@@ -84,7 +88,7 @@
                         </label>
                         <input id="uploadPoster-input" type="file" style="display : none"/> 
 
-                    </div>
+                    </div> -->
                 </div> <!-- "inputs-container-block" -->
                 <div class="inputs-container-block">
                     <div class="input-component input-description">
@@ -138,7 +142,9 @@
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
     <script src="../views/open-menu.js"></script>
-    <script src="../views/movieDetails.js"></script>
+    <script src="../views/logged.js"></script>
+    <script src="../views/edit.js"></script>
+    <!-- <script src="../views/movieDetails.js"></script> -->
 </body>
 
 </html>
