--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -27,7 +27,7 @@
     </nav>
     <section class="details-wrapper">
         <div class="details-poster">
-            <img class="details-poster-img" id="selectedMoviePoster" src="../img/nice-guys.jpg" alt="" />
+            <img class="details-poster-img" id="selectedMoviePoster" src="" alt="movie poster" />
         </div>
         <div class="details" id="detailed">
             <div class="section-container">
@@ -35,15 +35,17 @@
                     <div class="details-title-and-btns clearfix">
                         <h1 class="details-title" id="selectedMovieTitle"></h1>
                         <div class="details-btns">
-                            <button type="" id="edit_btn" class="edit-delete-btns">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
-                                    <g id="Layer_2" data-name="Layer 2">
-                                    <g id="Layer_1-2" data-name="Layer 1">
-                                    <rect class="cls-1" x="1" y="1" width="33" height="33" rx="16.5"/>
-                                    <path class="cls-2" d="M18.59,12.41l4,4-8.69,8.7-3.57.39a.75.75,0,0,1-.83-.83l.4-3.57Zm6.48-.6L23.19,9.93a1.52,1.52,0,0,0-2.13,0L19.29,11.7l4,4,1.77-1.77A1.52,1.52,0,0,0,25.07,11.81Z"/>
-                                    </g></g>
-                                </svg>
-                            </button>
+                            <a href="./add-edit.html">
+                                <button type="" id="edit_btn" class="edit-delete-btns">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
+                                        <g id="Layer_2" data-name="Layer 2">
+                                        <g id="Layer_1-2" data-name="Layer 1">
+                                        <rect class="cls-1" x="1" y="1" width="33" height="33" rx="16.5"/>
+                                        <path class="cls-2" d="M18.59,12.41l4,4-8.69,8.7-3.57.39a.75.75,0,0,1-.83-.83l.4-3.57Zm6.48-.6L23.19,9.93a1.52,1.52,0,0,0-2.13,0L19.29,11.7l4,4,1.77-1.77A1.52,1.52,0,0,0,25.07,11.81Z"/>
+                                        </g></g>
+                                    </svg>
+                                </button>
+                            </a>
                             <button type="" id="delete_btn" class="edit-delete-btns">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
                                     <g id="Layer_2" data-name="Layer 2">
