reengineered the authorization functionality for cross-pages persistance. Modularised using renderNavbar function

--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -15,10 +15,10 @@
         <div class="section-container">
             <a href="./home.html" class="logo">MOVIE<span>bit</span></a>
             <ul class="navigation">
-                <li id="btnLog" class="displayNavButtons"><a href="#" class="nav-link">Login</a></li>
-                <li id="btnReg" class="displayNavButtons last-link"><a href="#" class="nav-link">Register</a></li>
-                <li id="userDisplay" class="hideNavButtons"><a id="userDisplayA" href="#" class="nav-link"></a></li>
-                <li id="btnLogOut" class="hideNavButtons last-link"><a href="#" class="nav-link">Logout</a></li>
+                <li id="btnLog"      class="hideNavButtons">          <a href="#" class="nav-link">Login</a></li>
+                <li id="btnReg"      class="hideNavButtons last-link"><a href="#" class="nav-link">Register</a></li>
+                <li id="userDisplay" class="hideNavButtons">          <a href="#" class="nav-link" id="userDisplayA"></a></li>
+                <li id="btnLogOut"   class="hideNavButtons last-link"><a href="#" class="nav-link">Logout</a></li>
             </ul>
             <div class="burger-menu">
                 <span class="burger-line"></span>
@@ -131,7 +131,6 @@
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
     <script src="../views/open-menu.js"></script>
-    <script src="../views/logged.js"></script>
     <script src="../views/movieDetails.js"></script>
     <script src="../views/infoMessage.js"></script>
 </body>
