--- a/pages/home.html
+++ b/pages/home.html
@@ -15,10 +15,10 @@
         <div class="section-container">
             <a href="./home.html" class="logo">MOVIE<span>bit</span></a>
             <ul class="navigation">
-                <li id="btnLog" class="displayNavButtons"><a href="#" class="nav-link">Login</a></li>
-                <li id="btnReg" class="displayNavButtons"><a href="#" class="nav-link">Register</a></li>
-                <li id="userDisplay" class="hideNavButtons"><a id="userDisplayA" href="#" class="nav-link"></a></li>
-                <li id="btnLogOut" class="hideNavButtons"><a href="#" class="nav-link">Logout</a></li>
+                <li id="btnLog"      class="hideNavButtons"><a href="#" class="nav-link">Login</a></li>
+                <li id="btnReg"      class="hideNavButtons"><a href="#" class="nav-link">Register</a></li>
+                <li id="userDisplay" class="hideNavButtons"><a href="#" class="nav-link"  id="userDisplayA"></a></li>
+                <li id="btnLogOut"   class="hideNavButtons"><a href="#" class="nav-link">Logout</a></li>
             </ul>
             <div class="burger-menu">
                 <span class="burger-line"></span>
@@ -192,7 +192,6 @@
     <script src="../models/Movie.js"></script>
     <script src="../models/MovieList.js"></script>
     <script src="../views/authView.js"></script>
-    <script src="../views/logged.js"></script>
     <script src="../views/home.js"></script>
     <script src="../views/slider.js"></script>
     <script src="../views/open-menu.js"></script>
