split add from edit, add POST functionality to addBtn, fetch --> not adding data properly

--- a/pages/home.html
+++ b/pages/home.html
@@ -52,7 +52,7 @@
     </section>
     <section class="add-movie-section clearfix">
         <div class="section-container">
-            <a href="#" class="add-btn">Add movie
+            <a id="add_btn" href="./add-edit.html" class="add-btn">Add movie
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" class="svg-plus">
                     <title>Add button</title>
                     <g id="Layer_2" data-name="Layer 2">
