fetch --> jQuery, modularize code

--- a/pages/add-edit.html
+++ b/pages/add-edit.html
@@ -149,7 +149,7 @@
     <script src="../views/authView.js"></script>
     <script src="../views/open-menu.js"></script>
     <script src="../views/infoMessage.js"></script>
-    <script src="../views/edit.js"></script>
+    <script src="../views/add-edit.js"></script>
     <!-- <script src="../views/movieDetails.js"></script> -->
 </body>
 
