add Populate Movies Database

--- a/pages/home.html
+++ b/pages/home.html
@@ -52,6 +52,17 @@
     </section>
     <section class="add-movie-section clearfix">
         <div class="section-container">
+            <a id="regenerate_btn" href="#" class="add-btn">Populate DB
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" class="svg-plus">
+                    <title>Add button</title>
+                    <g id="Layer_2" data-name="Layer 2">
+                        <g id="Layer_1-2" data-name="Layer 1">
+                            <rect class="cls-1" x="1" y="1" width="33" height="33" rx="16.5"/>
+                            <polygon class="cls-2" points="24.5 16.5 18 16.5 18 10 16 10 16 16.5 9.5 16.5 9.5 18.5 16 18.5 16 25 18 25 18 18.5 24.5 18.5 24.5 16.5"/>
+                        </g>
+                    </g>
+                </svg>
+            </a>
             <a id="add_btn" href="./add-edit.html" class="add-btn">Add movie
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" class="svg-plus">
                     <title>Add button</title>
@@ -194,6 +205,7 @@
     <script src="../views/authView.js"></script>
     <script src="../views/home.js"></script>
     <script src="../views/slider.js"></script>
+    <script src="../views/infoMessage.js"></script>
     <script src="../views/open-menu.js"></script>
 </body>
 </html>
