logo header and footer

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,10 @@
 <body>
     <nav class="navigation-bar">
         <div class="section-container">
-            <a href="./home.html" class="logo">MOVIE<span>bit</span></a>
+            <a href="./home.html" class="logo">
+                <img src="../img/logo-1.png" alt="logo">
+                MOVIE<span>bit</span>
+            </a>
             <ul class="navigation">
                 <li id="btnLog"      class="hideNavButtons"><a href="#" class="nav-link">Login</a></li>
                 <li id="btnReg"      class="hideNavButtons"><a href="#" class="nav-link">Register</a></li>
@@ -166,7 +169,10 @@
     <footer>
         <div class="section-container">
             <div class="footer-title">
-                <p class="logo">Movie<span>bit</span></p>
+                <p class="logo">
+                    <img src="../img/logo-1.png" alt="logo">
+                    Movie<span>bit</span>
+                </p>
                 <p >Get your movies bit by bit</p>
             </div>
             <div class="footer-social">
