logo and slides height

--- a/pages/home.html
+++ b/pages/home.html
@@ -158,7 +158,10 @@
             </div>
             <div class="movie-populate-container">
                 <div class="movie-header clearfix">
-                    <p class="movie-header-title">Movie<span>bit</span></p>
+                    <p class="movie-header-title">
+                        <img src="../img/logo-1.png" alt="logo">
+                        Movie<span>bit</span>
+                    </p>
                     <p class="site-motto">Get your movies bit by bit</p>
                 </div>
                 <div class="movie-list" id="movieList"></div>
